2008-04-24  John W. Eaton  <jwe@octave.org>

	* file-io.cc (do_stream_open): Return -1 for directories.

2008-04-23  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__qp__.cc (qp): Avoid bounds error when removing
	constraint from active set.

	* lex.l (text_yyinput): New function.  Use it in place of yyinput.
	(next_token_is_sep_op, scan_for_comments, eat_whitespace,
	have_continuation): No need to check for CR or CRLF.
	* parse.y (text_getc): Also return NL for single CR.

2008-04-32  Michael Goffioul  <michael.goffioul@gmail.com>

	* input.cc (get_input_from_file): Open file in binary mode.

2008-04-20  John W. Eaton  <jwe@octave.org>

	* oct-stream.cc (octave_stream::read): Allow single data type
	specification but return double.

2008-04-18  John W. Eaton  <jwe@octave.org>

	* lex.l, lex.h (process_comment): New arg, start_in_block.  Call
	grab_block_comment if start_in_block is true.  Change all uses.
	* lex.l (grab_block_comment): New function.
	(grab_comment_block): New arg, at_bol.  Change all uses.
	Call grab_block_comment if we find the start of a block comment.
	(block_comment_nesting_level): New static variable.
	(^{S}*{CCHAR}\{{S}*{NL}): New rule.
	(<<EOF>>): Warn about open block comments.
	(reset_parser): Set block_comment_nesting_level to zero.
	* parse.y (parse_fcn_file): Stash help text from
	gobble_leading_white_space after calling reset_parser.
	(text_getc): Keep track of input_line_number here.
	(skip_white_sapce): Don't increment input_line_number here.
	* lex.l (grab_comment_block): Or here.

	* lex.l (Vdisplay_tokens): New static variable.
	(F__display_tokens__): New function.
	(display_token): New function.
	(DISPLAY_TOK_AND_RETURN): New macro.
	(COUNT_TOK_AND_RETURN): Use DISPLAY_TOK_AND_RETURN.
	(<COMMAND_START>[\"\'], "'", \"): Move handle_string outside of
	COUNT_TOK_AND_RETURN macro parameter list.
	(handle_identifier): Don't use macros to return token values here.